[gd_scene load_steps=3 format=3 uid="uid://bxj2liqsl52qr"]

[ext_resource type="Script" path="res://Scripts/end_game.gd" id="1_kcek7"]
[ext_resource type="AudioStream" uid="uid://df4oc1lye1ale" path="res://Sound Effects/Metal_Gong-Dianakc-109711828.mp3" id="2_qtqn5"]

[node name="endGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcek7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 3360.0
offset_bottom = 1640.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 587.0
offset_top = 249.0
offset_right = 1207.0
offset_bottom = 454.0
theme_override_colors/font_shadow_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/normal_font_size = 150
text = "You Lost"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 576.0
offset_top = 444.0
offset_right = 1229.0
offset_bottom = 527.0
theme_override_font_sizes/normal_font_size = 60
text = "You managed 0 orders"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 812.0
offset_top = 549.0
offset_right = 984.0
offset_bottom = 599.0
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 812.0
offset_top = 624.0
offset_right = 984.0
offset_bottom = 674.0
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 812.0
offset_top = 693.0
offset_right = 984.0
offset_bottom = 743.0
theme_override_font_sizes/font_size = 30
text = "Exit
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_qtqn5")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
